# pyrsistent-as-rpds-py

./: README.md  pyproject.toml
.github/workflows/: test.yml
extra/fake_rpds/src/rpds/: __init__.py
src/pyrsistent_as_rpds/: auto.py
src/rpds/: __init__.py
tests/: test_import.py
